search results poster width fix on mobile

--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -177,7 +177,7 @@ input {
   .movie-card--poster {
     align-self: center;
     height: 50px;
-    width: auto;
+    width: 40px;
   }
 
   .movie-card {
